--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,27 +1,8 @@
-@import 'abstracts/variables';
-@import 'abstracts/mixins';
-@import 'abstracts/functions';
-@import 'abstracts/animate';
 
-@import 'base/typography';
-@import 'base/colors';
-@import 'base/images';
-
-@import 'vendors/bootstrap-override-variable';
 @import 'bootstrap';
 @import 'font-awesome';
 
-@import 'layout/grid';
-@import 'layout/content';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'layout/section';
-
-@import 'components/ui-elements';;
-@import 'components/title';
-@import 'components/navigation-tab';
-@import 'components/table';
-@import 'components/block';
+@import 'vendor/_style';
 
 //Import page here
 // @import 'pages/message';
