--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,27 +1,9 @@
-@import 'abstracts/variables';
-@import 'abstracts/mixins';
-@import 'abstracts/functions';
-@import 'abstracts/animate';
 
-@import 'base/typography';
-@import 'base/colors';
-@import 'base/images';
-
-@import 'vendors/bootstrap-override-variable';
 @import 'bootstrap';
 @import 'font-awesome';
+@import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
 
-@import 'layout/grid';
-@import 'layout/content';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'layout/section';
+@import 'vendor/_style';
+@import 'vendor/_mobile';
 
-@import 'components/ui-elements';;
-@import 'components/title';
-@import 'components/navigation-tab';
-@import 'components/table';
-@import 'components/block';
 
-//Import page here
-// @import 'pages/message';
