--- a/source/index.pug
+++ b/source/index.pug
@@ -1,6 +1,12 @@
 include modules/menu/menu
+include modules/banner/banner
+
 doctype html
 html
 	head
+		meta(name="viewport" content="width=device-width", initial-scale="1", minimum-scale="1",maximum-scale="1")
+		link(rel='stylesheet', href='css/main.css')
 	body
 		+menu()
+		+banner()
+		script(src='js/main.js', charset='utf-8')
