--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,8 +1,9 @@
 
 @import 'bootstrap';
 @import 'font-awesome';
+@import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico";
 
 @import 'vendor/_style';
+@import 'vendor/_mobile';
 
-//Import page here
-// @import 'pages/message';
+
