--- a/source/modules/menu/menu.pug
+++ b/source/modules/menu/menu.pug
@@ -12,9 +12,9 @@ mixin menu()
 			li
 				a(href="") Home	
 			li
-				a(href="") Home	
+				a(href="") Generic
 			li
-				a(href="") Home	
+				a(href="") Elements
 		a(class='close', href='javascript:void(0);')
 			i.fa.fa-times
 		
