--- a/source/index.pug
+++ b/source/index.pug
@@ -1,5 +1,6 @@
 include modules/menu/menu
 include modules/banner/banner
+include modules/main1/main1
 
 doctype html
 html
@@ -9,4 +10,6 @@ html
 	body
 		+menu()
 		+banner()
+		+main('main1')(id="main1")
+		+main('main2')(id="main2")
 		script(src='js/main.js', charset='utf-8')
