--- a/source/modules/main1/main1.pug
+++ b/source/modules/main1/main1.pug
@@ -33,7 +33,22 @@ mixin main(page)
 								h6 CEO, Untitled
 
 		else
-			p abc
+			.main-detail.center-block
+				div.item-text
+					img(src="images/pic02.jpg", alt="")
+					h3 Consequat
+					p Placerat ornare. Pellentesque od sed euismod in, pharetra ltricies edarcu cas consequat.
+				div.item-text
+					img(src="images/pic03.jpg", alt="")
+					h3 Adipiscing
+					p Morbi in sem quis dui placerat Pellentesque odio nisi, euismod pharetra lorem ipsum.
+				div.item-text
+					img(src="images/pic04.jpg", alt="")
+					h3 Malesuada
+					p Nam dui mi, tincidunt quis, accu an porttitor, facilisis luctus que metus vulputate sem magna.
+
+
+							
 
 			
 
